Fixed directory hierarchy and pom.xml files. Added module-info files.
Client and Server now works as expected.